--- a/streams.examples/pom.xml
+++ b/streams.examples/pom.xml
@@ -80,6 +80,22 @@
                             <artifactId>tycho-compiler-jdt</artifactId>
                             <version>0.21.0</version>
                         </dependency>
+                        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+                        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+                        <dependency>
+                            <groupId>com.fasterxml.jackson.core</groupId>
+                            <artifactId>jackson-core</artifactId>
+                            <version>2.16.1</version>
+                        </dependency>
+                        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+                        <dependency>
+                            <groupId>com.fasterxml.jackson.core</groupId>
+                            <artifactId>jackson-databind</artifactId>
+                            <version>2.16.1</version>
+                        </dependency>
+
+
+
                     </dependencies>
                 </plugin>
                 <plugin>
@@ -136,6 +152,16 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
             <version>${kafka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.3</version>
         </dependency>
     </dependencies>
 </project>
