--- a/streams.examples/pom.xml
+++ b/streams.examples/pom.xml
@@ -93,6 +93,13 @@
                             <artifactId>jackson-databind</artifactId>
                             <version>2.16.1</version>
                         </dependency>
+                        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+                        <dependency>
+                            <groupId>com.fasterxml.jackson.datatype</groupId>
+                            <artifactId>jackson-datatype-jsr310</artifactId>
+                            <version>2.16.1</version>
+                        </dependency>
+
 
 
 
@@ -162,6 +169,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version>
         </dependency>
     </dependencies>
 </project>
