--- a/AppConsumer/pom.xml
+++ b/AppConsumer/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.16.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.6.1</version>
+        </dependency>
 
 
     </dependencies>
